--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>wopee - autonomous testing bot</title>
+    <title>wopee - autonomous testing bots</title>
     <meta
       content="We reduce waste in app building. The roomba for sw testing."
       name="description"
@@ -121,8 +121,8 @@
               <div class="content">
                 <h3>Who We Are</h3>
                 <h2>
-                  We are building a bot to reduce waste in software developement
-                  and testing.
+                  We are building a bots to reduce waste in software
+                  developement and testing.
                 </h2>
                 <p>
                   Traditional testing approaches are slowing down development
@@ -236,192 +236,6 @@
         </div>
       </section>
       <!-- End Services Section -->
-
-      <!-- ======= F.A.Q Section ======= -->
-      <section id="faq" class="faq">
-        <div class="container" data-aos="fade-up">
-          <header class="section-header">
-            <h2>F.A.Q</h2>
-            <p>Frequently Asked Questions</p>
-          </header>
-
-          <div class="row">
-            <div class="col-lg-6">
-              <!-- F.A.Q List 1-->
-              <div class="accordion accordion-flush" id="faqlist1">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#faq-content-1"
-                    >
-                      Non consectetur a erat nam at lectus urna duis?
-                    </button>
-                  </h2>
-                  <div
-                    id="faq-content-1"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#faqlist1"
-                  >
-                    <div class="accordion-body">
-                      Feugiat pretium nibh ipsum consequat. Tempus iaculis urna
-                      id volutpat lacus laoreet non curabitur gravida. Venenatis
-                      lectus magna fringilla urna porttitor rhoncus dolor purus
-                      non.
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#faq-content-2"
-                    >
-                      Feugiat scelerisque varius morbi enim nunc faucibus a
-                      pellentesque?
-                    </button>
-                  </h2>
-                  <div
-                    id="faq-content-2"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#faqlist1"
-                  >
-                    <div class="accordion-body">
-                      Dolor sit amet consectetur adipiscing elit pellentesque
-                      habitant morbi. Id interdum velit laoreet id donec
-                      ultrices. Fringilla phasellus faucibus scelerisque
-                      eleifend donec pretium. Est pellentesque elit ullamcorper
-                      dignissim. Mauris ultrices eros in cursus turpis massa
-                      tincidunt dui.
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#faq-content-3"
-                    >
-                      Dolor sit amet consectetur adipiscing elit pellentesque
-                      habitant morbi?
-                    </button>
-                  </h2>
-                  <div
-                    id="faq-content-3"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#faqlist1"
-                  >
-                    <div class="accordion-body">
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                      sagittis orci. Faucibus pulvinar elementum integer enim.
-                      Sem nulla pharetra diam sit amet nisl suscipit. Rutrum
-                      tellus pellentesque eu tincidunt. Lectus urna duis
-                      convallis convallis tellus. Urna molestie at elementum eu
-                      facilisis sed odio morbi quis
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6">
-              <!-- F.A.Q List 2-->
-              <div class="accordion accordion-flush" id="faqlist2">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#faq2-content-1"
-                    >
-                      Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
-                    </button>
-                  </h2>
-                  <div
-                    id="faq2-content-1"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#faqlist2"
-                  >
-                    <div class="accordion-body">
-                      Dolor sit amet consectetur adipiscing elit pellentesque
-                      habitant morbi. Id interdum velit laoreet id donec
-                      ultrices. Fringilla phasellus faucibus scelerisque
-                      eleifend donec pretium. Est pellentesque elit ullamcorper
-                      dignissim. Mauris ultrices eros in cursus turpis massa
-                      tincidunt dui.
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#faq2-content-2"
-                    >
-                      Tempus quam pellentesque nec nam aliquam sem et tortor
-                      consequat?
-                    </button>
-                  </h2>
-                  <div
-                    id="faq2-content-2"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#faqlist2"
-                  >
-                    <div class="accordion-body">
-                      Molestie a iaculis at erat pellentesque adipiscing
-                      commodo. Dignissim suspendisse in est ante in. Nunc vel
-                      risus commodo viverra maecenas accumsan. Sit amet nisl
-                      suscipit adipiscing bibendum est. Purus gravida quis
-                      blandit turpis cursus in
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#faq2-content-3"
-                    >
-                      Varius vel pharetra vel turpis nunc eget lorem dolor?
-                    </button>
-                  </h2>
-                  <div
-                    id="faq2-content-3"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#faqlist2"
-                  >
-                    <div class="accordion-body">
-                      Laoreet sit amet cursus sit amet dictum sit amet justo.
-                      Mauris vitae ultricies leo integer malesuada nunc vel.
-                      Tincidunt eget nullam non nisi est sit amet. Turpis nunc
-                      eget lorem dolor sed. Ut venenatis tellus in metus
-                      vulputate eu scelerisque. Pellentesque diam volutpat
-                      commodo sed egestas egestas fringilla phasellus faucibus.
-                      Nibh tellus molestie nunc non blandit massa enim nec.
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End F.A.Q Section -->
 
       <!-- ======= Team Section ======= -->
       <section id="team" class="team">
@@ -578,18 +392,12 @@
                   <i class="bi bi-chevron-right"></i> <a href="#">Home</a>
                 </li>
                 <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">About us</a>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">Services</a>
+                  <i class="bi bi-chevron-right"></i>
+                  <a href="#about">About us</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#">Terms of service</a>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
+                  <a href="#services">Services</a>
                 </li>
               </ul>
             </div>
@@ -598,28 +406,27 @@
               <h4>Our Services</h4>
               <ul>
                 <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">Web Design</a>
+                  <i class="bi bi-chevron-right"></i>
+                  <a href="https://www.tesena.com/en/services"
+                    >Testing services</a
+                  >
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#">Web Development</a>
+                  <a href="https://www.tesena.com/en/training"
+                    >Training courses</a
+                  >
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#">Product Management</a>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">Marketing</a>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <a href="#">Graphic Design</a>
+                  <a href="https://www.tesena.com/en/insights">Blog</a>
                 </li>
               </ul>
             </div>
 
             <div
               class="col-lg-3 col-md-12 footer-contact text-center text-md-start"
+              id="contact"
             >
               <h4>Contact Us</h4>
               <p>
