--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </p>
           </header>
 
-          <div class="row gy-4">
+          <div class="row gy-4 justify-content-center">
             <div
               class="col-lg-4 col-md-6"
               data-aos="fade-up"
@@ -242,10 +242,10 @@
         <div class="container" data-aos="fade-up">
           <header class="section-header">
             <h2>Team</h2>
-            <p>Our hard working team</p>
+            <p>Our team</p>
           </header>
 
-          <div class="row gy-4">
+          <div class="row gy-4 justify-content-center">
             <div
               class="col-lg-3 col-md-6 d-flex align-items-stretch"
               data-aos="fade-up"
@@ -281,7 +281,7 @@
               <div class="member">
                 <div class="member-img">
                   <img
-                    src="assets/img/team/team-2.jpg"
+                    src="assets/img/team/marcel.jpg"
                     class="img-fluid"
                     alt=""
                   />
