--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="#about">Get Started</a>
+              <a
+                class="getstarted scrollto"
+                href="https://calendly.com/marcel-veselka/wopee-demo"
+                >Book demo</a
+              >
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -87,10 +91,10 @@
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
                 <a
-                  href="#about"
+                  href="https://calendly.com/marcel-veselka/wopee-demo"
                   class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
                 >
-                  <span>Get Started</span>
+                  <span>Book demo</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -138,10 +142,10 @@
                 </p>
                 <div class="text-center text-lg-start">
                   <a
-                    href="#"
+                    href="https://calendly.com/marcel-veselka/wopee-demo"
                     class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center"
                   >
-                    <span>Read More</span>
+                    <span>Book demo</span>
                     <i class="bi bi-arrow-right"></i>
                   </a>
                 </div>
@@ -212,8 +216,10 @@
                 <p>
                   Use your existing automated tests and boost its efficiency.
                 </p>
-                <a href="#" class="read-more"
-                  ><span>Read More</span> <i class="bi bi-arrow-right"></i
+                <a
+                  href="https://calendly.com/marcel-veselka/wopee-demo"
+                  class="read-more"
+                  ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -227,8 +233,10 @@
                 <i class="ri-discuss-line icon"></i>
                 <h3>Self-driving Bot</h3>
                 <p>Independent testing bot, no automation required</p>
-                <a href="#" class="read-more"
-                  ><span>Read More</span> <i class="bi bi-arrow-right"></i
+                <a
+                  href="https://calendly.com/marcel-veselka/wopee-demo"
+                  class="read-more"
+                  ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -339,19 +347,19 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
-              <h4>Our Newsletter</h4>
+              <h4>Let's talk</h4>
               <p>
-                Tamen quem nulla quae legam multos aute sint culpa legam noster
-                magna
+                Are you interested in software testing autonomy? We too! Let's
+                discuss how we would work together.
               </p>
             </div>
             <div class="col-lg-6">
-              <form action="" method="post">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Subscribe"
-                />
-              </form>
+              <div class="text-center text-lg-start">
+                <a href="https://calendly.com/marcel-veselka/wopee-demo">
+                  <span>Book demo</span>
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
