social links updated

--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/honzaberanku/"
+                      ><i class="bi bi-linkedin"></i
+                    ></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -294,10 +296,12 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://twitter.com/marcelveselka"
+                      ><i class="bi bi-twitter"></i
+                    ></a>
+                    <a href="https://www.linkedin.com/in/marcelveselka/"
+                      ><i class="bi bi-linkedin"></i
+                    ></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -324,7 +328,7 @@
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/ond%C5%99ej-winter-4255b9166/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
