--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">We reduce waste in app building</h1>
+            <h1 data-aos="fade-up">Reduce waste in app building.</h1>
             <h2 data-aos="fade-up" data-aos-delay="400">
               The roomba for software testing
             </h2>
