--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
               <div class="content">
                 <h3>Who We Are</h3>
                 <h2>
-                  We are building a bots to reduce waste in software
-                  developement and testing.
+                  We are building bots to reduce waste in software developement
+                  and testing.
                 </h2>
                 <p>
                   Traditional testing approaches are slowing down development
