--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="content">
                 <h3>Who We Are</h3>
                 <h2>
-                  We are building bots to reduce waste in software developement
+                  We are building bots to reduce waste in software development
                   and testing.
                 </h2>
                 <p>
