--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </h2>
                 <p>
                   Traditional testing approaches are slowing down development
-                  and are no-longer scalable. We believed that test automation
+                  and are no longer scalable. We believed that test automation
                   was the solution. This belief failed.
                 </p>
                 <p>
@@ -337,7 +337,7 @@
                 <div class="member-info">
                   <h4>Ondřej Ondra Winter</h4>
                   <span>developer (bots and brains) </span>
-                  <p>Experienced test automation engineer, PHD student</p>
+                  <p>Experienced test automation engineer, Ph.D. student</p>
                 </div>
               </div>
             </div>
@@ -356,8 +356,8 @@
             <div class="col-lg-12 text-center">
               <h4>Let's talk</h4>
               <p>
-                Are you interested in software testing autonomy? We too! Let's
-                discuss how we would work together.
+                Are you interested in software testing autonomy? So are we!
+                Let's discuss how we would work together.
               </p>
             </div>
             <div class="col-lg-6">
