--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@
                 <a href="https://instagram.com/jsmetesena" class="instagram"
                   ><i class="bi bi-instagram"></i
                 ></a>
-                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/tesena/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/autonomous-testing" class="github"><i class="bi bi-github"></i></a>
               </div>
             </div>
 
