title fix / simplification

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>wopee - autonomous testing bots</title>
     <meta
-      content="We reduce waste in app building. The roomba for sw testing."
+      content="Reduce waste in app building. The roomba for sw testing."
       name="description"
     />
 
