adding drafted pricing section + waiting list

--- a/index.html
+++ b/index.html
@@ -245,6 +245,143 @@
       </section>
       <!-- End Services Section -->
 
+      <!-- ======= Pricing Section ======= -->
+      <section id="pricing" class="pricing">
+        <div class="container" data-aos="fade-up">
+          <header class="section-header">
+            <h2>Pricing (under preparation)</h2>
+            <p>Check our Plans</p>
+          </header>
+
+          <div class="row gy-4" data-aos="fade-left">
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="zoom-in"
+              data-aos-delay="100"
+            >
+              <div class="box">
+                <h3 style="color: #07d5c0">Free Plan</h3>
+                <div class="price">
+                  <sup>EUR</sup>0<br /><span> per user/mo</span>
+                </div>
+                <img
+                  src="assets/img/pricing-free.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <ul>
+                  <li>1 project</li>
+                  <li>3 users</li>
+                  <li>1.000 test steps</li>
+                  <li>1 shared test runner</li>
+                  <li>7 days data retention</li>
+                </ul>
+                <a
+                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  target="_blank"
+                  class="btn-buy"
+                  >Join waiting list</a
+                >
+              </div>
+            </div>
+
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="zoom-in"
+              data-aos-delay="200"
+            >
+              <div class="box">
+                <span class="featured">Featured</span>
+                <h3 style="color: #65c600">Premium Plan</h3>
+                <div class="price">
+                  <sup>EUR</sup>XX <br /><span>per user/mo</span>
+                </div>
+                <img
+                  src="assets/img/pricing-premium.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <ul>
+                  <li>3 project</li>
+                  <li>5 users</li>
+                  <li>10.000 test steps</li>
+                  <li>1 dedicated test runner</li>
+                  <li>14 days data retention</li>
+                </ul>
+                <a
+                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  target="_blank"
+                  class="btn-buy"
+                  >Join waiting list</a
+                >
+              </div>
+            </div>
+
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="zoom-in"
+              data-aos-delay="300"
+            >
+              <div class="box">
+                <h3 style="color: #ff901c">Ultimate Plan</h3>
+                <div class="price">
+                  <sup>EUR</sup>XXX<br /><span>per user/mo</span>
+                </div>
+                <img
+                  src="assets/img/pricing-ultimate.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <ul>
+                  <li>Unlimited project</li>
+                  <li>Unlimited users</li>
+                  <li>100.000 test steps</li>
+                  <li>3 dedicated test runners</li>
+                  <li>30 days data retention</li>
+                </ul>
+                <a
+                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  target="_blank"
+                  class="btn-buy"
+                  >Join waiting list</a
+                >
+              </div>
+            </div>
+
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="box">
+                <h3 style="color: #ff0071">Add-ons</h3>
+                <div class="price">
+                  <sup>EUR</sup>XX<br /><span>per #/month</span>
+                </div>
+                <img
+                  src="assets/img/pricing-addons.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <ul>
+                  <li>More test steps</li>
+                  <li>More test runners</li>
+                  <li>More data retention period</li>
+                  <li>On-call support</li>
+                </ul>
+                <a
+                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  target="_blank"
+                  class="btn-buy"
+                  >Join waiting list</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Pricing Section -->
+
       <!-- ======= Team Section ======= -->
       <section id="team" class="team">
         <div class="container" data-aos="fade-up">
@@ -396,8 +533,14 @@
                 <a href="https://instagram.com/jsmetesena" class="instagram"
                   ><i class="bi bi-instagram"></i
                 ></a>
-                <a href="https://www.linkedin.com/company/tesena/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/autonomous-testing" class="github"><i class="bi bi-github"></i></a>
+                <a
+                  href="https://www.linkedin.com/company/tesena/"
+                  class="linkedin"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+                <a href="https://github.com/autonomous-testing" class="github"
+                  ><i class="bi bi-github"></i
+                ></a>
               </div>
             </div>
 
@@ -414,6 +557,10 @@
                 <li>
                   <i class="bi bi-chevron-right"></i>
                   <a href="#services">Services</a>
+                </li>
+                <li>
+                  <i class="bi bi-chevron-right"></i>
+                  <a href="#pricing">Pricing</a>
                 </li>
               </ul>
             </div>
