--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PVTHWLV51B"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PVTHWLV51B");
+    </script>
+
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -396,8 +411,14 @@
                 <a href="https://instagram.com/jsmetesena" class="instagram"
                   ><i class="bi bi-instagram"></i
                 ></a>
-                <a href="https://www.linkedin.com/company/tesena/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/autonomous-testing" class="github"><i class="bi bi-github"></i></a>
+                <a
+                  href="https://www.linkedin.com/company/tesena/"
+                  class="linkedin"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
+                <a href="https://github.com/autonomous-testing" class="github"
+                  ><i class="bi bi-github"></i
+                ></a>
               </div>
             </div>
 
