bot and assistan description extended

--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Reduce waste in app building.</h1>
+            <h1 data-aos="fade-up">
+              Wopee is the autonomous testing platform.
+            </h1>
             <h2 data-aos="fade-up" data-aos-delay="400">
-              The roomba for software testing
+              The "roomba" in SW testing. Use our bots to improve efficiency and
+              reduce waste in development and testing.
             </h2>
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
@@ -231,6 +234,12 @@
                 <p>
                   Use your existing automated tests and boost its efficiency.
                 </p>
+                <p>
+                  We have simple plug & play solution ready for your existing
+                  Selenium, Playwright, Cypress.io and Robot Framework testing
+                  projects. If you use some other tools we are ready to build
+                  some special assistant also just for you ❤️!
+                </p>
                 <a
                   href="https://calendly.com/marcel-veselka/wopee-demo"
                   class="read-more"
@@ -247,7 +256,13 @@
               <div class="service-box orange">
                 <i class="ri-discuss-line icon"></i>
                 <h3>Self-driving Bot</h3>
-                <p>Independent testing bot, no automation required</p>
+                <p>Independent testing bot, no automation required.</p>
+                <p>
+                  Our bots explore your Web App, learn how it works and it is
+                  ready for testing. Sometimes it is not human to ask humans to
+                  test (runnnig regression testing ... especially several times
+                  a week/day, runnig it on many configurations, etc.)
+                </p>
                 <a
                   href="https://calendly.com/marcel-veselka/wopee-demo"
                   class="read-more"
@@ -457,7 +472,7 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Marcel Veselka</h4>
+                  <h4>Marcel (vem) Veselka</h4>
                   <span>tester</span>
                   <p>20 years in software testing, senior test consultant</p>
                 </div>
