--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>wopee - autonomous testing bots</title>
+    <title>wopee - autonomous testing platform</title>
     <meta
       content="Reduce waste in app building. The roomba for sw testing."
       name="description"
