company and team updates

--- a/index.html
+++ b/index.html
@@ -434,17 +434,17 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/honzaberanku/"
                       ><i class="bi bi-linkedin"></i
+                    ></a>
+                    <a href="https://github.com/jan-beranek"
+                      ><i class="bi bi-github"></i
                     ></a>
                   </div>
                 </div>
                 <div class="member-info">
                   <h4>Jan Honza Beránek</h4>
-                  <span>developer, reporting</span>
+                  <span>developer, reporting & CSO</span>
                   <p>Experienced web developer, technical team leader</p>
                 </div>
               </div>
@@ -463,18 +463,52 @@
                     alt=""
                   />
                   <div class="social">
+                    <a href="https://www.linkedin.com/in/marcelveselka/"
+                      ><i class="bi bi-linkedin"></i
+                    ></a>
                     <a href="https://twitter.com/marcelveselka"
                       ><i class="bi bi-twitter"></i
                     ></a>
-                    <a href="https://www.linkedin.com/in/marcelveselka/"
-                      ><i class="bi bi-linkedin"></i
+                    <a href="https://github.com/marcel-veselka"
+                      ><i class="bi bi-github"></i
                     ></a>
                   </div>
                 </div>
                 <div class="member-info">
                   <h4>Marcel (vem) Veselka</h4>
-                  <span>tester</span>
+                  <span>tester & CEO</span>
                   <p>20 years in software testing, senior test consultant</p>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-3 col-md-6 d-flex align-items-stretch"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="member">
+                <div class="member-img">
+                  <img
+                    src="assets/img/team/olena.jpg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href="https://github.com/AlenkaNahorna"
+                      ><i class="bi bi-github"></i
+                    ></a>
+                    <a
+                      href="https://www.linkedin.com/in/olena-nahorna-68b752237/"
+                      ><i class="bi bi-linkedin"></i
+                    ></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Olena (alenka) Nahorna</h4>
+                  <span>developer (commander) </span>
+                  <p>inspired beginner front-end developer</p>
                 </div>
               </div>
             </div>
@@ -492,9 +526,9 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href="https://github.com/wintero92"
+                      ><i class="bi bi-github"></i
+                    ></a>
                     <a
                       href="https://www.linkedin.com/in/ond%C5%99ej-winter-4255b9166/"
                       ><i class="bi bi-linkedin"></i
@@ -503,7 +537,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Ondřej Ondra Winter</h4>
-                  <span>developer (bots and brains) </span>
+                  <span>developer (bots and brains) & CTO </span>
                   <p>Experienced test automation engineer, Ph.D. student</p>
                 </div>
               </div>
@@ -545,7 +579,7 @@
             <div class="col-lg-5 col-md-12 footer-info">
               <a href="index.html" class="logo d-flex align-items-center">
                 <img src="assets/img/logo.png" alt="" />
-                <span>wopee</span>
+                <span>wopee labs s.r.o.</span>
               </a>
               <p>
                 We are building a software testing bot to reduce waste in
@@ -564,7 +598,7 @@
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
-                  href="https://www.linkedin.com/company/tesena/"
+                  href="https://www.linkedin.com/company/wopee/"
                   class="linkedin"
                   ><i class="bi bi-linkedin"></i
                 ></a>
@@ -623,11 +657,12 @@
             >
               <h4>Contact Us</h4>
               <p>
-                Budějovická 1550/15a<br />
+                Pujmanove 23/883<br />
                 Prague, 140 00<br />
                 Czech Republic <br /><br />
-                <strong>Phone:</strong> +420 226 293 560<br />
-                <strong>Email:</strong> info@tesena.com<br />
+
+                <strong>Company Registration No.:</strong> 17997224 <br />
+                <strong>VAT Tax ID:</strong> CZ17997224
               </p>
             </div>
           </div>
