--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                   <li>1 project</li>
                   <li>3 users</li>
                   <li>1.000 test steps</li>
-                  <li>1 shared test runner</li>
+                  <li>shared testing bots</li>
                   <li>7 days data retention</li>
                 </ul>
                 <a
@@ -335,7 +335,7 @@
                   <li>3 project</li>
                   <li>5 users</li>
                   <li>10.000 test steps</li>
-                  <li>1 dedicated test runner</li>
+                  <li>1 dedicated testing bot</li>
                   <li>14 days data retention</li>
                 </ul>
                 <a
@@ -366,7 +366,7 @@
                   <li>Unlimited project</li>
                   <li>Unlimited users</li>
                   <li>100.000 test steps</li>
-                  <li>3 dedicated test runners</li>
+                  <li>3 dedicated testing bots</li>
                   <li>30 days data retention</li>
                 </ul>
                 <a
@@ -395,7 +395,7 @@
                 />
                 <ul>
                   <li>More test steps</li>
-                  <li>More test runners</li>
+                  <li>More testing bots</li>
                   <li>More data retention period</li>
                   <li>On-call support</li>
                 </ul>
