--- a/index.html
+++ b/index.html
@@ -667,6 +667,21 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="row">
+            <div class="footer-info footer-links text-center">
+              <a href="toc.html">Terms and Conditions</a> |
+              <a href="gdpr.html">GDPR</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Wopee Labs s.r.o.</span></strong> All
+          Rights Reserved
+        </div>
       </div>
     </footer>
     <!-- End Footer -->
