fix: links to assets fixed

--- a/index.html
+++ b/index.html
@@ -670,8 +670,8 @@
         <div class="container">
           <div class="row">
             <div class="footer-info footer-links text-center">
-              <a href="toc/">Terms and Conditions</a> |
-              <a href="gdpr/">GDPR</a>
+              <a href="/toc/">Terms and Conditions</a> |
+              <a href="/gdpr/">GDPR</a>
             </div>
           </div>
         </div>
