--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                   <li>7 days data retention</li>
                 </ul>
                 <a
-                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
                   target="_blank"
                   class="btn-buy"
                   >Join waiting list</a
@@ -339,7 +339,7 @@
                   <li>14 days data retention</li>
                 </ul>
                 <a
-                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
                   target="_blank"
                   class="btn-buy"
                   >Join waiting list</a
@@ -370,7 +370,7 @@
                   <li>30 days data retention</li>
                 </ul>
                 <a
-                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
                   target="_blank"
                   class="btn-buy"
                   >Join waiting list</a
@@ -400,7 +400,7 @@
                   <li>On-call support</li>
                 </ul>
                 <a
-                  href="https://forms.gle/7Zuka5VW944TnF4T6"
+                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
                   target="_blank"
                   class="btn-buy"
                   >Join waiting list</a
