feat: calendly calendat changed to hubspot

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li>
               <a
                 class="getstarted scrollto"
-                href="https://calendly.com/marcel-veselka/wopee-demo"
+                href="https://meetings-eu1.hubspot.com/marcel-veselka"
                 >Book demo</a
               >
             </li>
@@ -109,7 +109,7 @@
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
                 <a
-                  href="https://calendly.com/marcel-veselka/wopee-demo"
+                  href="https://meetings-eu1.hubspot.com/marcel-veselka"
                   class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
                 >
                   <span>Book demo</span>
@@ -160,7 +160,7 @@
                 </p>
                 <div class="text-center text-lg-start">
                   <a
-                    href="https://calendly.com/marcel-veselka/wopee-demo"
+                    href="https://meetings-eu1.hubspot.com/marcel-veselka"
                     class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center"
                   >
                     <span>Book demo</span>
@@ -241,7 +241,7 @@
                   some special assistant also just for you ❤️!
                 </p>
                 <a
-                  href="https://calendly.com/marcel-veselka/wopee-demo"
+                  href="https://meetings-eu1.hubspot.com/marcel-veselka"
                   class="read-more"
                   ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
@@ -264,7 +264,7 @@
                   a week/day, runnig it on many configurations, etc.)
                 </p>
                 <a
-                  href="https://calendly.com/marcel-veselka/wopee-demo"
+                  href="https://meetings-eu1.hubspot.com/marcel-veselka"
                   class="read-more"
                   ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
@@ -563,7 +563,7 @@
             </div>
             <div class="col-lg-6">
               <div class="text-center text-lg-start">
-                <a href="https://calendly.com/marcel-veselka/wopee-demo">
+                <a href="https://meetings-eu1.hubspot.com/marcel-veselka">
                   <span>Book demo</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
