--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a
-                class="getstarted scrollto"
-                href="https://meetings-eu1.hubspot.com/marcel-veselka"
-                >Book demo</a
-              >
+              <a class="getstarted scrollto" href="book-demo/">Book demo</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -109,7 +105,7 @@
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
                 <a
-                  href="https://meetings-eu1.hubspot.com/marcel-veselka"
+                  href="book-demo/"
                   class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
                 >
                   <span>Book demo</span>
@@ -160,7 +156,7 @@
                 </p>
                 <div class="text-center text-lg-start">
                   <a
-                    href="https://meetings-eu1.hubspot.com/marcel-veselka"
+                    href="book-demo/"
                     class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center"
                   >
                     <span>Book demo</span>
@@ -240,9 +236,7 @@
                   projects. If you use some other tools we are ready to build
                   some special assistant also just for you ❤️!
                 </p>
-                <a
-                  href="https://meetings-eu1.hubspot.com/marcel-veselka"
-                  class="read-more"
+                <a href="book-demo/" class="read-more"
                   ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -263,9 +257,7 @@
                   test (runnnig regression testing ... especially several times
                   a week/day, runnig it on many configurations, etc.)
                 </p>
-                <a
-                  href="https://meetings-eu1.hubspot.com/marcel-veselka"
-                  class="read-more"
+                <a href="book-demo/" class="read-more"
                   ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -563,7 +555,7 @@
             </div>
             <div class="col-lg-6">
               <div class="text-center text-lg-start">
-                <a href="https://meetings-eu1.hubspot.com/marcel-veselka">
+                <a href="book-demo/">
                   <span>Book demo</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -612,7 +604,7 @@
               <h4>Useful Links</h4>
               <ul>
                 <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">Home</a>
+                  <i class="bi bi-chevron-right"></i> <a href="/#">Home</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
