--- a/toc/index.html
+++ b/toc/index.html
@@ -83,11 +83,7 @@
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a
-                class="getstarted scrollto"
-                href="https://calendly.com/marcel-veselka/wopee-demo"
-                >Book demo</a
-              >
+              <a class="getstarted scrollto" href="/book-demo/">Book demo</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
