--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
-            <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto active" href="/#hero">Home</a></li>
+            <li><a class="nav-link scrollto" href="/#about">About</a></li>
+            <li><a class="nav-link scrollto" href="/#services">Services</a></li>
+            <li><a class="nav-link scrollto" href="/#team">Team</a></li>
+            <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="book-demo/">Book demo</a>
+              <a class="getstarted scrollto" href="/book-demo/">Book demo</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -608,15 +608,15 @@
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#about">About us</a>
+                  <a href="/#about">About us</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#services">Services</a>
+                  <a href="/#services">Services</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#pricing">Pricing</a>
+                  <a href="/#pricing">Pricing</a>
                 </li>
               </ul>
             </div>
