--- a/toc/index.html
+++ b/toc/index.html
@@ -77,11 +77,11 @@
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
-            <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto active" href="/#hero">Home</a></li>
+            <li><a class="nav-link scrollto" href="/#about">About</a></li>
+            <li><a class="nav-link scrollto" href="/#services">Services</a></li>
+            <li><a class="nav-link scrollto" href="/#team">Team</a></li>
+            <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
             <li>
               <a class="getstarted scrollto" href="/book-demo/">Book demo</a>
             </li>
@@ -1539,19 +1539,19 @@
               <h4>Useful Links</h4>
               <ul>
                 <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">Home</a>
+                  <i class="bi bi-chevron-right"></i> <a href="/#">Home</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#about">About us</a>
+                  <a href="/#about">About us</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#services">Services</a>
+                  <a href="/#services">Services</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#pricing">Pricing</a>
+                  <a href="/#pricing">Pricing</a>
                 </li>
               </ul>
             </div>
