Feat/booking demo link to hubspot (#8)
* feat: calendly calendat changed to hubspot

* feat: book demo is now embeded into website

* fix: better links

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
-            <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto active" href="/#hero">Home</a></li>
+            <li><a class="nav-link scrollto" href="/#about">About</a></li>
+            <li><a class="nav-link scrollto" href="/#services">Services</a></li>
+            <li><a class="nav-link scrollto" href="/#team">Team</a></li>
+            <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="book-demo/">Book demo</a>
+              <a class="getstarted scrollto" href="/book-demo/">Book demo</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -105,7 +105,7 @@
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
                 <a
-                  href="book-demo/"
+                  href="/book-demo/"
                   class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
                 >
                   <span>Book demo</span>
@@ -156,7 +156,7 @@
                 </p>
                 <div class="text-center text-lg-start">
                   <a
-                    href="book-demo/"
+                    href="/book-demo/"
                     class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center"
                   >
                     <span>Book demo</span>
@@ -236,7 +236,7 @@
                   projects. If you use some other tools we are ready to build
                   some special assistant also just for you ❤️!
                 </p>
-                <a href="book-demo/" class="read-more"
+                <a href="/book-demo/" class="read-more"
                   ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -257,7 +257,7 @@
                   test (runnnig regression testing ... especially several times
                   a week/day, runnig it on many configurations, etc.)
                 </p>
-                <a href="book-demo/" class="read-more"
+                <a href="/book-demo/" class="read-more"
                   ><span>Book demo</span> <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -555,7 +555,7 @@
             </div>
             <div class="col-lg-6">
               <div class="text-center text-lg-start">
-                <a href="book-demo/">
+                <a href="/book-demo/">
                   <span>Book demo</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -608,15 +608,15 @@
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#about">About us</a>
+                  <a href="/#about">About us</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#services">Services</a>
+                  <a href="/#services">Services</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#pricing">Pricing</a>
+                  <a href="/#pricing">Pricing</a>
                 </li>
               </ul>
             </div>
