--- a/book-demo/index.html
+++ b/book-demo/index.html
@@ -31,8 +31,8 @@
     />
 
     <!-- Favicons -->
-    <link href="../assets/img/favicon.png" rel="icon" />
-    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="/assets/img/favicon.png" rel="icon" />
+    <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -41,27 +41,27 @@
     />
 
     <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="/assets/vendor/aos/aos.css" rel="stylesheet" />
     <link
-      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="/assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="/assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/glightbox/css/glightbox.min.css"
+      href="/assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
     <link
-      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      href="/assets/vendor/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
 
     <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet" />
+    <link href="/assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -70,18 +70,18 @@
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img src="../assets/img/logo.png" alt="" />
+        <a href="/" class="logo d-flex align-items-center">
+          <img src="/assets/img/logo.png" alt="" />
           <span>wopee</span>
         </a>
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
-            <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto active" href="/#hero">Home</a></li>
+            <li><a class="nav-link scrollto" href="/#about">About</a></li>
+            <li><a class="nav-link scrollto" href="/#services">Services</a></li>
+            <li><a class="nav-link scrollto" href="/#team">Team</a></li>
+            <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
             <li>
               <a class="getstarted scrollto" href="/book-demo/">Book demo</a>
             </li>
@@ -117,8 +117,8 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-5 col-md-12 footer-info">
-              <a href="index.html" class="logo d-flex align-items-center">
-                <img src="../assets/img/logo.png" alt="" />
+              <a href="/" class="logo d-flex align-items-center">
+                <img src="/assets/img/logo.png" alt="" />
                 <span>wopee labs s.r.o.</span>
               </a>
               <p>
@@ -152,19 +152,19 @@
               <h4>Useful Links</h4>
               <ul>
                 <li>
-                  <i class="bi bi-chevron-right"></i> <a href="#">Home</a>
+                  <i class="bi bi-chevron-right"></i> <a href="/#">Home</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#about">About us</a>
+                  <a href="/#about">About us</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#services">Services</a>
+                  <a href="/#services">Services</a>
                 </li>
                 <li>
                   <i class="bi bi-chevron-right"></i>
-                  <a href="#pricing">Pricing</a>
+                  <a href="/#pricing">Pricing</a>
                 </li>
               </ul>
             </div>
