--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="/" class="logo d-flex align-items-center">
           <img src="assets/img/logo.png" alt="" />
           <span>wopee</span>
         </a>
@@ -491,8 +491,7 @@
                     <a href="https://github.com/AlenkaNahorna"
                       ><i class="bi bi-github"></i
                     ></a>
-                    <a
-                      href="https://www.linkedin.com/in/olena-nahorna-68b752237/"
+                    <a href="https://www.linkedin.com/in/olena-nahorna/"
                       ><i class="bi bi-linkedin"></i
                     ></a>
                   </div>
@@ -521,8 +520,7 @@
                     <a href="https://github.com/wintero92"
                       ><i class="bi bi-github"></i
                     ></a>
-                    <a
-                      href="https://www.linkedin.com/in/ond%C5%99ej-winter-4255b9166/"
+                    <a href="https://www.linkedin.com/in/ondrej-winter/"
                       ><i class="bi bi-linkedin"></i
                     ></a>
                   </div>
@@ -569,7 +567,7 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-5 col-md-12 footer-info">
-              <a href="index.html" class="logo d-flex align-items-center">
+              <a href="/" class="logo d-flex align-items-center">
                 <img src="assets/img/logo.png" alt="" />
                 <span>wopee labs s.r.o.</span>
               </a>
