--- a/toc/index.html
+++ b/toc/index.html
@@ -31,8 +31,8 @@
     />
 
     <!-- Favicons -->
-    <link href="../assets/img/favicon.png" rel="icon" />
-    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="/assets/img/favicon.png" rel="icon" />
+    <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -41,27 +41,27 @@
     />
 
     <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="/assets/vendor/aos/aos.css" rel="stylesheet" />
     <link
-      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="/assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="/assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/glightbox/css/glightbox.min.css"
+      href="/assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
     <link
-      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      href="/assets/vendor/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
 
     <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet" />
+    <link href="/assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -70,8 +70,8 @@
       <div
         class="container-fluid container-xl d-flex align-items-center justify-content-between"
       >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img src="../assets/img/logo.png" alt="" />
+        <a href="/" class="logo d-flex align-items-center">
+          <img src="/assets/img/logo.png" alt="" />
           <span>wopee</span>
         </a>
 
@@ -98,7 +98,7 @@
       <section class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li>General Terms and Conditions</li>
           </ol>
           <h2>General Terms and Conditions</h2>
@@ -1473,7 +1473,7 @@
 
           <h3>Annex 2: Data Processing Agreement</h3>
 
-          <p>See <a href="gdpr.html">GDPR</a></p>
+          <p>See <a href="/gdpr/">GDPR</a></p>
 
           <h3>Annex 3: Contract withdrawal</h3>
 
@@ -1504,8 +1504,8 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-5 col-md-12 footer-info">
-              <a href="index.html" class="logo d-flex align-items-center">
-                <img src="../assets/img/logo.png" alt="" />
+              <a href="/" class="logo d-flex align-items-center">
+                <img src="/assets/img/logo.png" alt="" />
                 <span>wopee labs s.r.o.</span>
               </a>
               <p>
