--- a/join-waiting-list/index.html
+++ b/join-waiting-list/index.html
@@ -92,20 +92,31 @@
 
     <main id="main">
       <section class="inner-page">
-        <div class="container">
-          <script
-            charset="utf-8"
-            type="text/javascript"
-            src="//js-eu1.hsforms.net/forms/embed/v2.js"
-          ></script>
-          <script>
-            hbspt.forms.create({
-              region: "eu1",
-              portalId: "139620033",
-              formId: "84a28e76-815e-4e0f-b304-3c8c83bcd109",
-            });
-          </script>
-        </div>
+        <main id="main">
+          <section id="waiting-list">
+            <div class="container aos-init aos-animate" data-aos="fade-up">
+              <header class="section-header">
+                <h2>Waiting list</h2>
+                <p>Join our waoting list 🤩</p>
+              </header>
+
+              <div class="row gy-4 justify-content-center">
+                <script
+                  charset="utf-8"
+                  type="text/javascript"
+                  src="//js-eu1.hsforms.net/forms/embed/v2.js"
+                ></script>
+                <script>
+                  hbspt.forms.create({
+                    region: "eu1",
+                    portalId: "139620033",
+                    formId: "84a28e76-815e-4e0f-b304-3c8c83bcd109",
+                  });
+                </script>
+              </div>
+            </div>
+          </section>
+        </main>
       </section>
     </main>
     <!-- End #main -->
