fix: formating improvements

--- a/join-waiting-list/index.html
+++ b/join-waiting-list/index.html
@@ -92,15 +92,14 @@
 
     <main id="main">
       <section class="inner-page">
-        <main id="main">
-          <section id="waiting-list">
-            <div class="container aos-init aos-animate" data-aos="fade-up">
-              <header class="section-header">
+        <div class="footer-newsletter">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-12 text-center">
                 <h2>Waiting list</h2>
-                <p>Join our waoting list 🤩</p>
-              </header>
-
-              <div class="row gy-4 justify-content-center">
+                <p>Join our waiting list 🤩</p>
+              </div>
+              <div class="col-lg-6">
                 <script
                   charset="utf-8"
                   type="text/javascript"
@@ -115,8 +114,8 @@
                 </script>
               </div>
             </div>
-          </section>
-        </main>
+          </div>
+        </div>
       </section>
     </main>
     <!-- End #main -->
