--- a/join-waiting-list/index.html
+++ b/join-waiting-list/index.html
@@ -90,34 +90,33 @@
     </header>
     <!-- End Header -->
 
-    <main id="main">
-      <section class="inner-page">
-        <div class="footer-newsletter">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-12 text-center">
-                <h2>Waiting list</h2>
-                <p>Join our waiting list 🤩</p>
-              </div>
-              <div class="col-lg-6">
-                <script
-                  charset="utf-8"
-                  type="text/javascript"
-                  src="//js-eu1.hsforms.net/forms/embed/v2.js"
-                ></script>
-                <script>
-                  hbspt.forms.create({
-                    region: "eu1",
-                    portalId: "139620033",
-                    formId: "84a28e76-815e-4e0f-b304-3c8c83bcd109",
-                  });
-                </script>
-              </div>
+    <!-- -->
+    <footer id="footer" class="footer">
+      <div class="footer-newsletter">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-12 text-center">
+              <h4>Waiting list</h4>
+              <p>Join our waiting list 🤩</p>
+            </div>
+            <div class="col-lg-6">
+              <script
+                charset="utf-8"
+                type="text/javascript"
+                src="//js-eu1.hsforms.net/forms/embed/v2.js"
+              ></script>
+              <script>
+                hbspt.forms.create({
+                  region: "eu1",
+                  portalId: "139620033",
+                  formId: "84a28e76-815e-4e0f-b304-3c8c83bcd109",
+                });
+              </script>
             </div>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </footer>
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
